--- a/style/main.css
+++ b/style/main.css
@@ -1,1 +1,20 @@
-/*# sourceMappingURL=main.css.map */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: hsl(184, 9%, 50%);
+}
+
+table {
+  width: 100%;
+  margin: 30px auto;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 10px;
+  border: 1px solid #666;
+}/*# sourceMappingURL=main.css.map */
