--- a/style/main.css
+++ b/style/main.css
@@ -1,9 +1,21 @@
+body {
+  background-color: hsl(0, 0%, 50%);
+}
+
+.datatable {
+  width: 95%;
+  margin: 30px auto;
+  border-collapse: collapse;
+  background-color: hsl(184, 9%, 50%);
+}
+
+th, td {
+  padding: 10px;
+  border: 1px solid #666;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-body {
-  background-color: hsl(184, 9%, 50%);
 }/*# sourceMappingURL=main.css.map */
