--- a/clock/clockstyle.css
+++ b/clock/clockstyle.css
@@ -29,12 +29,12 @@ body{
 }
 
 .time{
-    font-size: 90px;
+    font-size: 65px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-/*
+
 .time span:not(:last-child){
     position: relative;
     margin: 0 6px;
@@ -42,7 +42,16 @@ body{
     text-align: center;
     letter-spacing: 3px;
 }
-*/
+
+.time span:last-child{
+    background: #202C45;
+    font-size: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 10px;
+    padding: 0 5px;
+    border-radius: 3px;
+}
 
 
 
