--- a/style/main.css
+++ b/style/main.css
@@ -1,17 +1,18 @@
 body {
-  background-color: hsl(0, 0%, 50%);
+  background-color: #28BAF1;
 }
 
 .datatable {
   width: 95%;
   margin: 30px auto;
   border-collapse: collapse;
-  background-color: hsl(184, 9%, 50%);
+  background-color: #E0E1D9;
 }
 
 th, td {
   padding: 10px;
-  border: 1px solid #666;
+  border: 3px solid #071937;
+  color: #071937;
 }
 
 * {
