--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #28BAF1;
+  background-color: #071937;
 }
 
 .datatable {
@@ -11,7 +11,7 @@ body {
 
 th, td {
   padding: 10px;
-  border: 3px solid #071937;
+  border: 3px solid #28BAF1;
   color: #071937;
 }
 
