--- a/style/_config.scss
+++ b/style/_config.scss
@@ -24,3 +24,47 @@ img{
 }
 
 
+// Clock style
+
+.datetime{
+    color: $blue;
+    background: $dark-blue;
+    font-family: 'Times New Roman', Times, serif;
+    width: 340px;
+    padding: 15px 10px;
+    border: 3px solid;
+    border-radius: 5px;
+    margin-left: 60px;
+}
+
+.date{
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    letter-spacing: 3px;
+}
+
+.time{
+    font-size: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.time span:not(:last-child){
+    position: relative;
+    margin: 0 6px;
+    font-weight: 600;
+    text-align: center;
+    letter-spacing: 3px;
+}
+
+.time span:last-child{
+    background: $dark-blue;
+    font-size: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 10px;
+    padding: 0 5px;
+    border-radius: 3px;
+}
