--- a/style/main.css
+++ b/style/main.css
@@ -21,6 +21,49 @@ img {
   padding: 0;
 }
 
+.datetime {
+  color: #28BAF1;
+  background: #071937;
+  font-family: "Times New Roman", Times, serif;
+  width: 340px;
+  padding: 15px 10px;
+  border: 3px solid;
+  border-radius: 5px;
+  margin-left: 60px;
+}
+
+.date {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.time {
+  font-size: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.time span:not(:last-child) {
+  position: relative;
+  margin: 0 6px;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+.time span:last-child {
+  background: #071937;
+  font-size: 30px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 10px;
+  padding: 0 5px;
+  border-radius: 3px;
+}
+
 * {
   padding: 0;
   margin: 0;
