--- a/openRoomsStyle.css
+++ b/openRoomsStyle.css
@@ -18,6 +18,10 @@ td, th{
     border-collapse: collapse;
 }
 
+tr{
+    height: 37px;
+}
+
 th{
     font-weight: 900;
 }
@@ -33,7 +37,6 @@ td{
 
 .button-col1, .button-col2, .button-col3{
     border: 2px solid #28BAF1;
-    width: 9.25rem;
 }
 
 /* Clock Style */
@@ -80,4 +83,7 @@ td{
     border-radius: 3px;
 }
 
-
+/* Button Style */
+img{
+    height: 26.42px;
+}
