--- a/openRoomsStyle.css
+++ b/openRoomsStyle.css
@@ -48,7 +48,8 @@ td{
     padding: 15px 10px;
     border: 3px solid;
     border-radius: 5px;
-    margin-left: 50px;
+    margin-left: 128px;
+    margin-top: 15px;
 }
 
 .date{
