--- a/openRoomsStyle.css
+++ b/openRoomsStyle.css
@@ -1,7 +1,7 @@
 body{
     background-color: #071937;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Anton', sans-serif;
 }
 
 .tables{
@@ -16,18 +16,21 @@ td, th{
     color: #E0E1D9;
     border: 2px solid #28BAF1;
     border-collapse: collapse;
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 0.05rem;
 }
 
 tr{
     height: 37px;
+    font-weight: bold;
 }
 
 th{
-    font-weight: 900;
+    font-weight: 400;
 }
 
 td{
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .rooms-col1, .rooms-col2, .rooms-col3{
@@ -44,7 +47,7 @@ td{
 .datetime{
     color: #00ABE1;
     background: #202C45;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Anton', sans-serif;
     width: 340px;
     padding: 15px 10px;
     border: 3px solid;
